// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateEventEmitterH can generate fixture ARRAY_PROPS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture COLOR_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture COMMANDS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture ENUM_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {

struct EventsNestedObjectNativeComponentOnChangeLocationSourceStruct {
  std::string url;
};

struct EventsNestedObjectNativeComponentOnChangeLocationStruct {
  EventsNestedObjectNativeComponentOnChangeLocationSourceStruct source;
  int x;
  int y;
};

struct EventsNestedObjectNativeComponentOnChangeStruct {
  EventsNestedObjectNativeComponentOnChangeLocationStruct location;
};

class EventsNestedObjectNativeComponentEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  void onChange(EventsNestedObjectNativeComponentOnChangeStruct value) const;
};

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture EVENT_PROPS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {

struct EventsNativeComponentOnChangeStruct {
  bool value;
  std::string source;
  int progress;
  Float scale;
};

struct EventsNativeComponentOnEventDirectStruct {
  bool value;
};

enum class EventsNativeComponentOnOrientationChangeOrientationStruct {
  Landscape,
  Portrait
};

inline char const *toString(const EventsNativeComponentOnOrientationChangeOrientationStruct value) {
  switch (value) {
    case EventsNativeComponentOnOrientationChangeOrientationStruct::Landscape: return \\"landscape\\";
    case EventsNativeComponentOnOrientationChangeOrientationStruct::Portrait: return \\"portrait\\";
  }
}

struct EventsNativeComponentOnOrientationChangeStruct {
  EventsNativeComponentOnOrientationChangeOrientationStruct orientation;
};

class EventsNativeComponentEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  void onChange(EventsNativeComponentOnChangeStruct value) const;

  void onEventDirect(EventsNativeComponentOnEventDirectStruct value) const;

  void onOrientationChange(EventsNativeComponentOnOrientationChangeStruct value) const;

  void onEnd() const;
};

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {

struct InterfaceOnlyComponentOnChangeStruct {
  bool value;
};

struct InterfaceOnlyComponentOnDire tChangeStruct {
  bool value;
};

class InterfaceOnlyComponentEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  void onChange(InterfaceOnlyComponentOnChangeStruct value) const;

  void onDire tChange(InterfaceOnlyComponentOnDire tChangeStruct value) const;
};

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture FLOAT_PROPS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture IMAGE_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture INTEGER_PROPS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {

struct InterfaceOnlyComponentOnChangeStruct {
  bool value;
};

class InterfaceOnlyComponentEventEmitter : public ViewEventEmitter {
 public:
  using ViewEventEmitter::ViewEventEmitter;

  void onChange(InterfaceOnlyComponentOnChangeStruct value) const;
};

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture POINT_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture STRING_PROP 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateEventEmitterH can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "EventEmitters.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
#pragma once

#include <react/components/view/ViewEventEmitter.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;
